Adding the post distortion shaping
Fixed second stage, looks like we have lots of distortion now!

--- a/schema/Makefile
+++ b/schema/Makefile
@@ -10,7 +10,7 @@ all: $(EXE_FILES) $(CPP_FILES) $(DAT_FILES) $(PNG_FILES)
 	ATKModellingGenerator $< $@
 
 %.exe: %.cpp generate.cpp
-	${CXX} -std=c++17 -O3 -DNDEBUG $< generate.cpp -o $@ -I /Users/matthieu/local/lib -I /Users/matthieu/local/include -I /Users/matthieu/local/boost_1_75_0 -L /Users/matthieu/local/lib -L /Users/matthieu/local/lib -lATKCore -lATKModelling
+	${CXX} -std=c++17 -O3 -DNDEBUG $< generate.cpp -o $@ $(CXXFLAGS) -lATKCore -lATKModelling
 
 %.dat: %.exe
 	./$< $@
