--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "MT2/ATKJUCEComponents"]
-	path = MT2/ATKJUCEComponents
-	url = https://github.com/AudioTK/ATKJUCEComponents.git
-[submodule "MTB/ATKJUCEComponents"]
-	path = MTB/ATKJUCEComponents
+[submodule "ATKJUCEComponents"]
+	path = ATKJUCEComponents
 	url = https://github.com/AudioTK/ATKJUCEComponents.git
