--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ATKJUCEComponents"]
 	path = ATKJUCEComponents
-	url = https://github.com/AudioTK/ATKJUCEComponents.git
+	url = git@github.com:AudioTK/ATKJUCEComponents.git
